updated status code && authorization user && add open api && debugging
