# chapter-05/app/controller/api/cars.js
@@ -8,10 +8,10 @@ const upload = multer({storage})
 const CarsController = require('../carsController');
 const UsersController = require('../userController');
 
-router.get('/', CarsController.getListCars)
-.get('/:id', CarsController.findCarsbyId , CarsController.getCars)
-.post('/' ,  UsersController.authorizationAdmin , upload.single('car-image'), CarsController.createCarsValidation , CarsController.createCars)
-.put('/:id', UsersController.authorizationAdmin , upload.single('car-image') , CarsController.updateCarsValidation , CarsController.updateCars)
-.delete('/:id',UsersController.authorizationAdmin, CarsController.findCarsbyId  , CarsController.deleteCars )
+router.get('/',UsersController.authorizationToResource, CarsController.getListCars)
+.get('/:id', UsersController.authorizationToResource , CarsController.getCars)
+.post('/' ,  UsersController.authorizationToResource , upload.single('car-image'), CarsController.createCarsValidation , CarsController.createCars)
+.put('/:id', UsersController.authorizationToResource , upload.single('car-image') , CarsController.updateCarsValidation , CarsController.updateCars)
+.delete('/:id',UsersController.authorizationToResource, CarsController.deleteCars )
 
 module.exports = router;
